# django-nova-friend

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  docker-compose.ci.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  setup.cfg
config/: .env.template
docker/: docker-compose.override.yml
docker/django/: Dockerfile  entrypoint.sh
server/: urls.py
server/settings/: __init__.py
server/settings/components/: caches.py  common.py  cors.py  email.py  nova_friend.py  sentry.py
server/settings/environments/: development.py  production.py
src/nova_friend/: admin.py  apps.py  permissions.py  signals.py
src/nova_friend/api/serializers/: __init__.py  friend_request.py  referral_code.py  referral_invite.py
src/nova_friend/api/views/: friend_request.py  referral_code.py  referral_invite.py
src/nova_friend/models/: __init__.py  friend_request.py  referral_code.py  referral_invite.py
src/nova_friend/permissions/: friend_request.py
src/nova_friend/services/: absolute_url.py  action_friend_request.py  base_model.py  base_user_serializer.py  check_friend_request.py  create_friend_request.py  create_referral_code.py  enums.py  receiver.py  views.py  viewsets.py
tests/: conftest.py
tests/test_server/: test_urls.py
